tests/rosetta/transpiler/Rust/find-duplicate-files.error
warning: unnecessary trailing semicolon
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/find-duplicate-files.rs:53:2
   |
53 | };
   |  ^ help: remove this semicolon
   |
   = note: `#[warn(redundant_semicolons)]` on by default

warning: unnecessary trailing semicolon
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/find-duplicate-files.rs:61:2
   |
61 | };
   |  ^ help: remove this semicolon

warning: unnecessary parentheses around assigned value
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/find-duplicate-files.rs:65:28
   |
65 |     let duration_us: i64 = ((_end - _start) / 1000);
   |                            ^                      ^
   |
   = note: `#[warn(unused_parens)]` on by default
help: remove these parentheses
   |
65 -     let duration_us: i64 = ((_end - _start) / 1000);
65 +     let duration_us: i64 = (_end - _start) / 1000;
   |

warning: unnecessary parentheses around assigned value
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/find-duplicate-files.rs:66:29
   |
66 |     let memory_bytes: i64 = (_end_mem - _start_mem);
   |                             ^                     ^
   |
help: remove these parentheses
   |
66 -     let memory_bytes: i64 = (_end_mem - _start_mem);
66 +     let memory_bytes: i64 = _end_mem - _start_mem;
   |

error[E0308]: mismatched types
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/find-duplicate-files.rs:55:43
   |
55 | ...s: HashMap<String, String> = HashMap::from([(String::from("a.txt"), "hello"), (String::from("b.txt"), "world"), (String::from("c.txt"), "hello"), (String::from("d.txt"), "foo"), (String::from("e.txt"), "world")]);
   |       -----------------------   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `HashMap<String, String>`, found `HashMap<String, &str>`
   |       |
   |       expected due to this
   |
   = note: expected struct `HashMap<_, String>`
              found struct `HashMap<_, &str>`

warning: variable does not need to be mutable
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/find-duplicate-files.rs:41:53
   |
41 |     fn findDuplicates(fs: &HashMap<String, String>, mut paths: Vec<String>) -> Vec<Vec<String>> {
   |                                                     ----^^^^^
   |                                                     |
   |                                                     help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` on by default

warning: variable does not need to be mutable
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/find-duplicate-files.rs:45:13
   |
45 |         let mut content: String = fs[path.as_str()].clone().clone();
   |             ----^^^^^^^
   |             |
   |             help: remove this `mut`

error: aborting due to 1 previous error; 6 warnings emitted

For more information about this error, try `rustc --explain E0308`.
